Update for Minecraft 1.20.6 (#212)
* Initial 1.20.5 port

* Remove CraftBukkitReflection

No longer needed with new Paper

* Update dependencies

* Update paperweight

* Java 21 deprecations

* switch on sealed types

* Remove RecordTypeAdapterFactory

GSON supports records on its own now

* Make fabric work again

* 1.20.6

* Update run-paper and paperweight